# umsl-cmp-sci-4500-project-snapshot-2019-04-20

./: .gitmodules  CMakeLists.txt
python/cozmonaut/entry_point/: __init__.py  friend_list.py  friend_remove.py  interact.py  interact2.py
src/: client.c  client.h  cozmo_image.cpp  cozmo_image.h  image.h  log.c  log.cpp  log.h  main.c  service.c  service.h  tracker.c  tracker.h
